--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
+	<script src="https://kit.fontawesome.com/3341fb6481.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<title>CARAVAN</title>
 </head>
@@ -9,6 +10,11 @@
 
 	<header>
 		<h1 class="heading"><a href="index.html">CARAVAN</a></h1>
+		<div class="social">
+			<i class="fab fa-square-facebook"></i>
+			<i class="fab fa-square-twitter"></i>
+			<i class="fab fa-instagram"></i>
+		</div>
 		<nav>
 			<ul class="nav-list">
 				<li class="nav-list-item"><a href="index.html">Home</a></li>
